InsuranceOrg/force-app/main/default/objects/vlocity_ins__EventDuringInteraction__c/vlocity_ins__EventDuringInteraction__c.object-meta.xml
<CustomObject>
    <description>Each Event During Interaction is a user clickstream event that occurred during the Expanded Interaction Log user interaction.</description>
    <label>Event During Interaction</label>
    <nameField>
        <displayFormat>EV-{0000000000}</displayFormat>
        <label>Event During Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events During Interaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>