InsuranceOrg/force-app/main/default/objects/vlocity_ins__EventDuringInteraction__c/fields/vlocity_ins__ExpandedInteractionLog__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ExpandedInteractionLog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expanded Interaction Log</label>
    <referenceTo>vlocity_ins__ExpandedInteractionLog__c</referenceTo>
    <relationshipLabel>Events During Interaction</relationshipLabel>
    <relationshipName>Events_During_Interaction</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>