InsuranceOrg/force-app/main/default/objects/vlocity_ins__EventDuringInteraction__c/fields/vlocity_ins__TabSubtabID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TabSubtabID__c</fullName>
    <label>Tab Subtab ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>