InsuranceOrg/force-app/main/default/objects/vlocity_ins__EventDuringInteraction__c/fields/vlocity_ins__TimeOfEvent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TimeOfEvent__c</fullName>
    <label>Time Of Event</label>
    <type>DateTime</type>
</CustomField>